--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"build": "parcel build src/index.html"
 	},
 	"dependencies": {
+		"aos": "^2.3.4",
 		"bootstrap": "^4.6.0"
 	},
 	"devDependencies": {
