:heavy_plus_sign: Locally added bootstrap dependencies

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 	},
 	"dependencies": {
 		"aos": "^2.3.4",
-		"bootstrap": "^4.6.0"
+		"bootstrap": "^4.6.0",
+		"jquery": "^3.5.1"
 	},
 	"devDependencies": {
 		"parcel-bundler": "^1.12.4",
